# clawee-desktop-demo

./: .gitignore  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: package-desktop-demo.yml
apps/desktop/: electron-builder.json  package.json  pnpm-lock.yaml  tsconfig.json
apps/desktop/electron/: main.ts  paths.ts  process-manager.ts
apps/desktop/scripts/: build-desktop.ts  build-gateway.sh  build-gateway.ts  build-openclaw-demo.ts  build-web.sh  build-web.ts  dev.ts  electron-runtime.ts  package-desktop.ts
apps/desktop/tests/: package-desktop.test.ts  paths.test.ts  self-contained-runtime.test.ts
apps/gateway/: pyinstaller.spec  pyproject.toml
apps/gateway/app/: desktop_entry.py  main.py
apps/gateway/app/core/: config.py
apps/gateway/app/schemas/: demo.py
apps/gateway/app/services/: openclaw_client.py
apps/gateway/tests/: test_demo_api.py  test_openclaw_client.py
apps/web/: next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  page.tsx
apps/web/lib/: api.ts
docs/: github-actions-packaging.md  tag-release-packaging-completion.md
